--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "ra-data-simple-rest": "^5.3.1",
     "react": "^18.3.1",
+    "react-admin": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0"
