--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "ra-data-simple-rest": "^5.3.1",
+    "ra-input-rich-text": "^5.3.3",
     "react": "^18.3.1",
     "react-admin": "^5.3.1",
     "react-dom": "^18.3.1",
