--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+	"scss" : "sass --watch src/styles/index.scss src/index.css",
     "lint": "eslint .",
     "preview": "vite preview"
   },
