--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-	"scss" : "sass --watch src/styles/index.scss src/index.css",
+    "scss": "sass --watch src/styles/index.scss src/index.css",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -18,7 +18,8 @@
     "react-admin": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
