--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/joy": "^5.0.0-beta.48",
     "axios": "^1.7.7",
     "ra-data-simple-rest": "^5.3.1",
     "ra-input-rich-text": "^5.3.3",
